<resources>
    <string name="app_name">Fitsa_User_App</string>
    <string name="fitsa">FITSA</string>
    <string name="user_login">User Login</string>
    <string name="create_new_account">create new account ?</string>
    <string name="Login">Login</string>
    <string name="n_signup_page">Signup</string>
    <string name="n_password_hint">password</string>
    <string name="submit_btn">Submit</string>
    <string name="n_email_hint">email</string>
    <string name="n_name_hint">name</string>
    <string name="exercise">Exercise</string>
    <string name="nutritionist_mmi">Nutritionist</string>
    <string name="trainer_mmi">Trainer</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="mr_fitsa">Mr. Fitsa</string>
    <string name="study1">Qualification</string>
    <string name="_3_years">3-years</string>
    <string name="experience">Experience</string>
    <string name="institute">Institute</string>
    <string name="abc_university">ABC University</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="rating">Rating</string>
    <string name="subscribe">Subscribe</string>
    <string name="logo_desc">Mr. fitsa</string>
    <string name="continue_as_nutritionist">Continue As Nutritionist?</string>
    <string name="name_hint">name</string>
    <string name="qualification_hint">qualification</string>
    <string name="experience_hint">6 months, 1 year</string>
    <string name="institute_hint">institute</string>
    <string name="submit_nutri_btn">Submit</string>
    <string name="nutri_update_profile_btn">Update</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="close_drawer">Close</string>
    <string name="open_drawer">Open</string>
    <string name="user">User</string>
</resources>
