<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/exercise_mi"
        android:title="@string/exercise"
        android:icon="@drawable/exercise_stick"

        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/nutritionist_mi"
        android:title="@string/nutritionist_mmi"
        android:icon="@drawable/nutritionist"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/trainer_mi"
        android:title="@string/trainer_mmi"
        android:icon="@drawable/trainer"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        />

</menu>