<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<group android:checkableBehavior="single">

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/pikachu"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/pikachu"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <!--<item-->
        <!--android:id="@+id/action_dummy"-->
        <!--android:title="Dummy"-->
        <!--android:icon="@drawable/pikachu"-->
        <!--android:orderInCategory="3"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/pikachu"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"/>

</group>


</menu>