<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="167dp"
        android:text="@string/n_signup_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/n_name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/n_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/n_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/n_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/n_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/n_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_name" />

    <EditText
        android:id="@+id/n_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/n_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_email" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="272dp"
        android:text="@string/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_password" />
</android.support.constraint.ConstraintLayout>