<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NutritionistRegistrationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="56dp"
        android:layout_height="44dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="167dp"
        android:text="@string/n_signup_page"
        app:layout_constraintBottom_toTopOf="@+id/n_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <EditText
        android:id="@+id/n_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:hint="@string/n_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/n_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/n_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"


        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/n_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/n_confirm_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_email" />

    <EditText
        android:id="@+id/n_confirm_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/n_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_password" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="162dp"
        android:text="@string/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_confirm_pwd" />
</android.support.constraint.ConstraintLayout>